# peonpad

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README.md
LICENSES/: README.md
assets/aleonas-tales/: README.md
cmake/: PeonPadSDL3.cmake  PeonPadTabletop.cmake  README.md
cmake/toolchains/: ios-arm64.cmake  ios-simulator-arm64.cmake  xros-arm64.cmake  xros-simulator-arm64.cmake
docs/: aleona-asset-audit.md  build-status.md  goal-0-preflight.md  ios-app-shell.md  ios-static-libraries.md  ipad-test-notes.md  macos-baseline.md  sdl3-foundation.md  visionos-shell.md  visionos-simulator-automation.md  visionos-tabletop.md  visionos-wargus-data.md  warcraft2-ipados-build-plan.md
engine/: README.md
engine/stratagus/: .peonpad-source-revision  CMakeLists.txt
engine/stratagus/.github/workflows/: appimage.yml  macos.yml  ubuntu.yml  windows.yml
engine/stratagus/src/editor/: editloop.cpp
engine/stratagus/src/game/: game.cpp
engine/stratagus/src/include/: controller_input.h  input_intent.h  interface.h  iolib.h  sdl_compat.h  sdl_controller_adapter.h  sdl_gl_compat.h  sdl_input_adapter.h  ui.h  video.h  widgets.h
engine/stratagus/src/map/: fow.cpp  map_draw.cpp  map_fog.cpp  minimap.cpp  script_tileset.cpp
engine/stratagus/src/sound/: music.cpp  sound_server.cpp
engine/stratagus/src/stratagus/: iolib.cpp  mainloop.cpp  parameters.cpp  player.cpp  script_player.cpp  stratagus.cpp  util.cpp
engine/stratagus/src/ui/: botpanel.cpp  controller_input.cpp  icons.cpp  input_intent.cpp  interface.cpp  mainscr.cpp  mouse.cpp  ui.cpp  uibuttons_proc.cpp  widgets.cpp
engine/stratagus/src/unit/: script_unit.cpp
engine/stratagus/src/video/: color.cpp  cursor.cpp  font.cpp  graphic.cpp  mng.cpp  movie.cpp  png.cpp  sdl.cpp  sdl_controller_adapter.cpp  sdl_input_adapter.cpp  shaders.cpp  video.cpp
engine/stratagus/tests/: sdl3_engine_compat_test.cpp
engine/stratagus/tests/stratagus/: test_script_unit.cpp
game/: README.md
game/wargus/: .peonpad-source-revision  CMakeLists.txt  wargus.cpp  wartool.cpp
game/wargus/.github/workflows/: macos.yml
game/wargus/StormLib/src/: SBaseCommon.cpp  StormLib.h
patches/stratagus/: 0001-xcode-26-apple-vendored-deps.patch  0002-route-relative-editor-maps-to-user.patch  0003-ios-arm64-static-dependencies.patch  0004-ios-xcode-external-generator.patch  0005-ios-metal-safe-area-viewport.patch  0006-ios-launch-image-resource.patch  0007-build-host-toluapp.patch  0008-input-intent-router.patch  0009-game-controller-input.patch  0010-direct-sdl3-engine.patch  0010-visionos-indirect-controls.patch  0011-visionos-indirect-controls.patch  0012-tabletop-bridge-gamehook.patch  0013-fix-trigger-null-unit-crash.patch
patches/wargus/: 0001-xcode-26-apple-vendored-deps.patch  0002-ios-data-layer-library.patch
platform/apple/: PeonPadSDL3Window.h  PeonPadSDL3Window.mm  README.md
platform/apple/ios/: Info.plist.in  PeonPadIOSControlState.h  PeonPadIOSControls.h  PeonPadIOSControls.mm  PeonPadIOSViewport.h  PeonPadIOSViewport.mm  PeonPadViewportGeometry.cpp  PeonPadViewportGeometry.h  copy-xcode-bundle-resources.sh
platform/apple/macos/: Info.plist
platform/apple/visionos/: Info.plist.in  PeonPadVisionOSShell.h  PeonPadVisionOSShell.mm  compile-bundle-assets.sh
platform/bridge/: PeonPadTabletopBridge.cpp  PeonPadTabletopBridge.h  TabletopSeenTerrainCache.h  TabletopSelectionPolicy.h  TabletopTilesetExport.cpp  TabletopTilesetExport.h  TabletopTilesetExportCache.cpp  TabletopTilesetExportCache.h  TabletopTilesetPath.cpp  TabletopTilesetPath.h  module.modulemap
platform/sdl3/: PeonPadSDL3InputAdapter.cpp  PeonPadSDL3InputAdapter.h  PeonPadSDL3MixerAdapter.cpp
platform/sdl3/include/: SDL.h  SDL_endian.h  SDL_events.h  SDL_gamecontroller.h  SDL_image.h  SDL_mixer.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_syswm.h
scripts/: accept-visionos.sh  audit-aleona-assets.sh  build-ios-app.sh  build-ios-libs.sh  build-macos.sh  build-sdl3-foundation.sh  build-vision-compat-simulator.sh  build-visionos-engine-libs.sh  build-visionos-shell.sh  build-visionos-tabletop.sh  find-vision-pro-simulator.sh  generate-ios-xcode.sh  inject-visionos-wargus-data.sh  install-visionos-device.sh  open-visionos-simulator.sh  preflight-vision-compat.sh  preflight.sh  prepare-ipad-build.sh  prepare-macos-bundle.sh  reference-digest.sh  run-macos.sh  smoke-macos.sh  stage-ios-wc2-test-data.sh  stage-locked-inputs.sh  stage-visionos-wargus-data.sh  test-ios-viewport.sh  test-tabletop-gestures.sh  test-visionos-tabletop-action-panel.sh  test-visionos-tabletop-assets.sh  test-visionos-tabletop-chunks.sh  test-visionos-tabletop-gameplay.sh  test-visionos-tabletop-gestures.sh  test-visionos-tabletop-harness.sh  test-visionos-tabletop-launcher.sh  test-visionos-tabletop-layers.sh  test-visionos-tabletop-live-state.sh  test-visionos-tabletop-navigation.sh  test-visionos-tabletop-transport.sh  tracked-tree-sha256.sh  verify-sdl3-sources.sh  (+4 more)
tests/: README.md  input_intent_test.cpp  script-guardrails.sh  sdl3_foundation_smoke.cpp  sdl3_input_adapter_test.cpp  sdl3_mixer_adapter_test.cpp  tabletop_action_panel_test.swift  tabletop_asset_resolution_test.swift  tabletop_bridge_acceptance.sh  tabletop_bridge_test.cpp  tabletop_chunk_geometry_test.swift  tabletop_command_harness_test.swift  tabletop_gameplay_state_test.swift  tabletop_gesture_state_test.swift  tabletop_launcher_model_test.swift  tabletop_layers_test.swift  tabletop_live_state_test.swift  tabletop_navigation_test.swift  tabletop_tileset_export_test.cpp  tabletop_transport_conversion_test.swift  tabletop_transport_test.swift  toolchain_probe.cpp  viewport_geometry_test.cpp  visionos-acceptance.sh  visionos-simulator-isolation.sh  wartool-music-extension-test.sh
tests/fixtures/: fake-cmake-3.27.sh  fake-stratagus.sh  fake-visionos-acceptance-build.sh  fake-visionos-acceptance-cmake.sh  fake-visionos-acceptance-host-tool.sh  fake-visionos-acceptance-verify.sh  fake-visionos-acceptance-xcodebuild.sh  fake-visionos-acceptance-xcrun.sh  fake-visionos-binary-tool.sh  fake-visionos-simctl.sh  fake-xcrun.sh
(+41 files in other folders)
